app/styles/main.scss
// bower:scss
@import "bower_components/bootstrap/scss/bootstrap.scss";
// endbower
@import "fonts.scss";

/* RGB */
$white:  rgba(255, 255, 250, 1);
$red:    rgba(204, 41, 54, 1);
$yellow: rgba(252, 202, 70, 1);
$black:  rgba(10, 15, 13, 1);
$blue:   rgba(0, 61, 91, 1);

body {
  font-family: 'WeblySleek_UI_Semilight';
}

.title, .tags {
  font-family: 'Lato';
}

.navbar {
  background-color: $black;
  opacity: 0.8;
  a, span {
    color: $white;
  }
}

.aboutme {
  // margin-top: 56px;
  color: $white;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.aboutBG {
  background-image: url(../images/about_bg.jpg);
  background-size: cover;
}

.bg-glass {
  background: inherit;
  position: relative;
  &:before {
    content: '';
    position: absolute;
    width:100%;
    height:100%;
    background: inherit;
  }
  &:after {
    // background-color: $black;
    background: transparentize($black, 0.3);
    -webkit-filter: blur(3px);
    filter: blur(3px);
    content: '';
    position: absolute;
    left:0;
    top:0;
    width: 100%;
    height: 100%;
  }
  .text {
    position: relative;
    padding: 20px;
    z-index:5;
    display: block;
  }
}

.jumbotron {
  margin-bottom: 0;
  color: $white;
}

// testing
.project-tictactoe {
  background: url(../images/_grey.jpg) bottom center no-repeat;
}
.project-red {
  background: url(../images/red.jpg) bottom center no-repeat;
}
.project-yellow {
  background: url(../images/yellow.jpg) bottom center no-repeat;
}
.project-blue {
  background: url(../images/blue.jpg) bottom center no-repeat;
}

.footer {
  position: absolute;
  width: 100%;
}

// fix spacing for screens up to desktop breakpoint
@media (max-width: 992px) {
  .jumbotron {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

